--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ footer, header, hgroup, menu, nav, section {
   padding: 0;
   -webkit-box-sizing:border-box;
   box-sizing:border-box;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 /* variable declare in root scope to perform global in the stylesheet */
@@ -51,7 +51,10 @@ footer, header, hgroup, menu, nav, section {
   --desktop-font-size:112.5%;
   --primary-font-weight: 400;
   --second-font-weight: 500;
-  --main-bold-font:HelveticaBold;
+  --third-font-weight:600;
+  --fourth-font-weight:700;
+  --fifth-font-weight:800;
+  --sixth-font-weight:900;
   --base-line-height:150%;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -91,6 +94,12 @@ a:hover {
 a:active, a:focus {
   outline: none;
 }
+
+button:focus{
+  border: none;
+  outline: none;
+}
+
 :active, :focus { 
   outline: none; 
   -moz-outline-style: none; 
@@ -133,6 +142,42 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+p:empty{display:none}
+section:empty{display:none}
+
+html{
+  overflow-y:scroll;
+  overflow-x:hidden;
+  scroll-behavior:smooth;
+  font-size:var(--base-font-size);  
+  line-height:var(--base-line-height);
+}
+html,body{height:100%;width:100%;position:relative}
+body{
+margin:0;
+font-family:var(--main-font);
+counter-reset:location;
+background-color:var(--white);
+font-size:var(--base-font-size)
+}
+@media (min-width: 768px) {
+  body {
+    font-size:var(--desktop-font-size);  
+  }
+}
+html,body{margin:0;padding:0;height:100%}
+button{
+  word-wrap:break-word!important;
+  white-space:unset!important;
+  overflow-wrap:break-word;
+  word-wrap:break-word;
+  word-break:break-word;
+  -ms-hyphens:auto;
+  -moz-hyphens:auto;
+  -webkit-hyphens:auto;
+  hyphens:auto;
+  line-height:normal!important
+}
 
 /*--------------------------------------------------------------
 # Preloader
@@ -141,7 +186,7 @@ table {
 .loader-bg {
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: rgb(0 0 0 / 90%);
   position: fixed;
   display: flex;
   justify-content: center;
@@ -272,9 +317,6 @@ section {
   color: var(--white);
 }
 
-/* .btn-book {
-  margin-left: 15px;
-} */
 
 
 /*--------------------------------------------------------------
@@ -299,6 +341,7 @@ section {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
+  line-height: normal;
   border-radius: 0;
   caret-color: #ed3c0d;
 }
@@ -335,6 +378,7 @@ section {
   align-items: center;
   justify-content: center;
   font-size: 1.5rem;
+  line-height: 0;
   width: 2.75rem;
   height: 2.75rem;
   border-radius: 50px;
@@ -345,7 +389,7 @@ section {
 }
 
 .back-to-top i:hover {
-  background-color: #cda45e;
+  background-color: #d5e0e0;
   color: #1a1814;
 }
 
@@ -372,6 +416,7 @@ section {
 }
 .header .logo span {
   font-size: 30px;
+  line-height: normal;
   font-weight: 700;
   letter-spacing: 1px;
   color: #012970;
@@ -404,6 +449,7 @@ section {
   padding: 10px 0 10px 30px;
   font-family: "Nunito", sans-serif;
   font-size: 16px;
+  line-height: normal;
   font-weight: 700;
   color: #013289;
   white-space: nowrap;
@@ -449,6 +495,7 @@ section {
 .navbar .dropdown ul a {
   padding: 10px 20px;
   font-size: 15px;
+  line-height: normal;
   text-transform: none;
   font-weight: 600;
 }
@@ -475,6 +522,7 @@ section {
   visibility: visible;
 }
 
+/* Media Navbar */
 @media (min-width: 768px){
   .navbar-collapse {flex-grow: inherit;}
 }
@@ -506,6 +554,7 @@ section {
 .banner h1 {
   margin: 0;
   font-size: 48px;
+  line-height: normal;
   font-weight: 700;
   color: #012970;
   line-height: 48px;
@@ -514,7 +563,7 @@ section {
   color: #444444;
   margin: 15px 0 0 0;
   font-size: 26px;
-  line-height: 26px;
+  line-height: normal;
 }
 .banner .btn-get-started {
   margin-top: 30px;
@@ -529,12 +578,13 @@ section {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   font-size: 16px;
-  line-height: 16px;
+  line-height: normal;
   letter-spacing: 1px;
 }
 .banner .btn-get-started i {
   margin-left: 5px;
   font-size: 18px;
+  line-height: normal;
   transition: 0.3s;
 }
 .banner .btn-get-started:hover i {
@@ -586,6 +636,7 @@ section {
 }
 .about h3 {
   font-size: 14px;
+  line-height: normal;
   font-weight: 700;
   color: #4154f1;
   text-transform: uppercase;
@@ -611,11 +662,13 @@ section {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   font-size: 16px;
+  line-height: normal;
   letter-spacing: 1px;
 }
 .about .btn-read-more i {
   margin-left: 5px;
   font-size: 18px;
+  line-height:0;
   transition: 0.3s;
 }
 .about .btn-read-more:hover i {
@@ -637,6 +690,7 @@ section {
 }
 .values .box h3 {
   font-size: 24px;
+  line-height: normal;
   color: #012970;
   font-weight: 700;
   margin-bottom: 18px;
@@ -658,6 +712,7 @@ section {
 }
 .features .feature-box h3 {
   font-size: 18px;
+  line-height: normal;
   color: #012970;
   font-weight: 700;
   margin: 0;
@@ -668,6 +723,7 @@ section {
   padding: 4px;
   margin-right: 10px;
   font-size: 24px;
+  line-height: 0;
   border-radius: 3px;
   transition: 0.3s;
 }
@@ -682,6 +738,7 @@ section {
   color: #012970;
   font-weight: 700;
   font-size: 32px;
+  line-height: normal;
   margin-bottom: 10px;
 }
 @media (max-width: 768px) {
@@ -696,6 +753,7 @@ section {
   background: none;
   text-transform: uppercase;
   font-size: 15px;
+  line-height: normal;
   font-weight: 600;
   color: #012970;
   padding: 12px 0;
@@ -709,6 +767,7 @@ section {
 }
 .features .feture-tabs .tab-content h4 {
   font-size: 18px;
+  line-height: normal;
   margin: 0;
   font-weight: 700;
   color: #012970;
@@ -726,6 +785,7 @@ section {
   color: #012970;
   font-weight: 700;
   font-size: 32px;
+  line-height: normal;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -739,18 +799,20 @@ section {
 }
 .features .feature-icons .content .icon-box h4 {
   font-size: 20px;
+  line-height: normal;
   font-weight: 700;
   margin: 0 0 10px 0;
   color: #012970;
 }
 .features .feature-icons .content .icon-box i {
   font-size: 44px;
-  line-height: 44px;
+  line-height: 0;
   color: #0245bc;
   margin-right: 15px;
 }
 .features .feature-icons .content .icon-box p {
   font-size: 15px;
+  line-height: normal;
   color: #848484;
 }
 
@@ -783,12 +845,13 @@ section {
   justify-content: center;
   font-weight: 600;
   font-size: 16px;
+  line-height: normal;
   padding: 8px 20px;
 }
 .services .service-box .read-more i {
-  line-height: 0;
   margin-left: 5px;
   font-size: 18px;
+  line-height: 0;
 }
 .services .service-box.blue {
   border-bottom: 3px solid #2db6fa;
@@ -893,22 +956,26 @@ section {
 .pricing h3 {
   font-weight: 700;
   font-size: 18px;
+  line-height: normal;
   margin-bottom: 15px;
 }
 .pricing .price {
   font-size: 36px;
+  line-height: normal;
   color: #444444;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
 }
 .pricing .price sup {
   font-size: 20px;
+  line-height: normal;
   top: -15px;
   left: -3px;
 }
 .pricing .price span {
   color: #bababa;
   font-size: 16px;
+  line-height: normal;
   font-weight: 300;
 }
 .pricing img {
@@ -919,8 +986,8 @@ section {
   list-style: none;
   color: #444444;
   text-align: center;
-  line-height: 26px;
   font-size: 16px;
+  line-height: normal;
   margin-bottom: 25px;
 }
 .pricing ul li {
@@ -948,6 +1015,7 @@ section {
   transform: rotate(45deg);
   z-index: 1;
   font-size: 14px;
+  line-height: normal;
   padding: 1px 0 3px 0;
   background-color: #4154f1;
   color: #fff;
@@ -962,6 +1030,7 @@ section {
   font-weight: 600;
   border: 0;
   font-size: 18px;
+  line-height: normal;
   color: #444444;
   text-align: left;
 }
@@ -994,7 +1063,7 @@ section {
   padding: 8px 20px 10px 20px;
   font-size: 15px;
   font-weight: 600;
-  line-height: 1;
+  line-height: normal;
   color: #444444;
   margin: 0 4px 8px 4px;
   transition: 0.3s;
@@ -1062,6 +1131,7 @@ section {
 }
 .portfolio .portfolio-wrap .portfolio-info h4 {
   font-size: 20px;
+  line-height: normal;
   color: #012970;
   font-weight: 700;
 }
@@ -1069,6 +1139,7 @@ section {
   color: #012970;
   font-weight: 600;
   font-size: 14px;
+  line-height: normal;
   text-transform: uppercase;
   padding: 0;
   margin: 0;
@@ -1146,12 +1217,14 @@ section {
 }
 .testimonials .testimonial-item h3 {
   font-size: 18px;
+  line-height: normal;
   font-weight: bold;
   margin: 10px 0 5px 0;
   color: #111;
 }
 .testimonials .testimonial-item h4 {
   font-size: 14px;
+  line-height: normal;
   color: #999;
   margin: 0;
 }
@@ -1231,6 +1304,7 @@ section {
 }
 .team .member .social i {
   font-size: 18px;
+  line-height: 0;
 }
 .team .member .member-info {
   padding: 10px 15px 20px 15px;
@@ -1239,6 +1313,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
+  line-height: normal;
   color: #012970;
 }
 .team .member .member-info span {
@@ -1304,6 +1379,7 @@ section {
 }
 .recent-blog-posts .post-box .post-date {
   font-size: 16px;
+  line-height: normal;
   font-weight: 600;
   color: rgba(1, 41, 112, 0.6);
   display: block;
@@ -1311,6 +1387,7 @@ section {
 }
 .recent-blog-posts .post-box .post-title {
   font-size: 24px;
+  line-height: normal;
   color: #012970;
   font-weight: 700;
   margin-bottom: 18px;
@@ -1325,9 +1402,9 @@ section {
   transition: 0.3s;
 }
 .recent-blog-posts .post-box .readmore i {
-  line-height: 0;
   margin-left: 4px;
   font-size: 18px;
+  line-height: 0;
 }
 .recent-blog-posts .post-box:hover .post-title {
   color: #4154f1;
@@ -1349,14 +1426,15 @@ section {
 }
 .contact .info-box h3 {
   font-size: 20px;
+  line-height: normal;
   color: #012970;
   font-weight: 700;
   margin: 20px 0 10px 0;
 }
 .contact .info-box p {
   padding: 0;
-  line-height: 24px;
   font-size: 14px;
+  line-height: normal;
   margin-bottom: 0;
 }
 
@@ -1376,6 +1454,7 @@ section {
 }
 .blog .entry .entry-title {
   font-size: 28px;
+  line-height: normal;
   font-weight: bold;
   padding: 0;
   margin: 0 0 20px 0;
@@ -1414,7 +1493,7 @@ section {
   line-height: 1;
 }
 .blog .entry .entry-content p {
-  line-height: 24px;
+  line-height: normal;
 }
 .blog .entry .entry-content .read-more {
   -moz-text-align-last: right;
@@ -1427,6 +1506,7 @@ section {
   padding: 6px 20px;
   transition: 0.3s;
   font-size: 14px;
+  line-height: 1;
   border-radius: 4px;
 }
 .blog .entry .entry-content .read-more a:hover {
@@ -1434,6 +1514,7 @@ section {
 }
 .blog .entry .entry-content h3 {
   font-size: 22px;
+  line-height: normal;
   margin-top: 30px;
   font-weight: bold;
 }
@@ -1452,6 +1533,7 @@ section {
   font-style: italic;
   font-weight: 500;
   font-size: 22px;
+  line-height: normal;
 }
 .blog .entry .entry-content blockquote::after {
   content: "";
@@ -1484,6 +1566,7 @@ section {
   display: inline;
   padding: 0 20px 0 0;
   font-size: 14px;
+  line-height: normal;
 }
 .blog .entry .entry-footer .cats li {
   display: inline-block;
@@ -1493,6 +1576,7 @@ section {
   display: inline;
   padding: 0;
   font-size: 14px;
+  line-height: normal;
 }
 .blog .entry .entry-footer .tags li {
   display: inline-block;
@@ -1504,6 +1588,7 @@ section {
 }
 .blog .entry .entry-footer .share {
   font-size: 16px;
+  line-height: normal;
 }
 .blog .entry .entry-footer .share i {
   padding-left: 5px;
@@ -1523,6 +1608,7 @@ section {
 .blog .blog-author h4 {
   font-weight: 600;
   font-size: 22px;
+  line-height: normal;
   margin-bottom: 0px;
   padding: 0;
   color: #012970;
@@ -1556,6 +1642,7 @@ section {
 }
 .blog .blog-comments .comment h5 {
   font-size: 16px;
+  line-height: normal;
   margin-bottom: 2px;
 }
 .blog .blog-comments .comment h5 a {
@@ -1572,10 +1659,12 @@ section {
 }
 .blog .blog-comments .comment h5 .reply i {
   font-size: 20px;
+  line-height: 0;
 }
 .blog .blog-comments .comment time {
   display: block;
   font-size: 14px;
+  line-height: normal;
   color: #013ca3;
   margin-bottom: 5px;
 }
@@ -1590,6 +1679,7 @@ section {
 .blog .blog-comments .reply-form h4 {
   font-weight: bold;
   font-size: 22px;
+  line-height: normal;
 }
 .blog .blog-comments .reply-form p {
   font-size: 14px;
@@ -1598,6 +1688,7 @@ section {
   border-radius: 4px;
   padding: 10px 10px;
   font-size: 14px;
+  line-height: normal;
 }
 .blog .blog-comments .reply-form input:focus {
   box-shadow: none;
@@ -1607,6 +1698,7 @@ section {
   border-radius: 4px;
   padding: 10px 10px;
   font-size: 14px;
+  line-height: normal;
 }
 .blog .blog-comments .reply-form textarea:focus {
   box-shadow: none;
@@ -1657,6 +1749,7 @@ section {
 }
 .blog .sidebar .sidebar-title {
   font-size: 20px;
+  line-height: normal;
   font-weight: 700;
   padding: 0 0 0 0;
   margin: 0 0 15px 0;
@@ -1743,6 +1836,7 @@ section {
   margin-left: 95px;
   font-style: italic;
   font-size: 14px;
+  line-height: normal;
   color: #aaaaaa;
 }
 .blog .sidebar .tags {
@@ -1783,6 +1877,7 @@ section {
   background-color: #f6f9ff;
   padding: 0 0 30px 0;
   font-size: 14px;
+  line-height: normal;
 }
 .footer .footer-newsletter {
   padding: 50px 0;
@@ -1791,6 +1886,7 @@ section {
 }
 .footer .footer-newsletter h4 {
   font-size: 24px;
+  line-height: normal;
   margin: 0 0 10px 0;
   padding: 0;
   line-height: 1;
@@ -1818,6 +1914,7 @@ section {
   border: 0;
   background: none;
   font-size: 16px;
+  line-height: normal;
   padding: 0 30px;
   margin: 3px;
   background-color: #4154f1;
@@ -1861,6 +1958,7 @@ section {
 }
 .footer .footer-top .footer-info p {
   font-size: 14px;
+  line-height: normal;
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Nunito", sans-serif;
@@ -1878,6 +1976,7 @@ section {
 }
 .footer .footer-top h4 {
   font-size: 16px;
+  line-height: normal;
   font-weight: bold;
   color: #012970;
   text-transform: uppercase;
@@ -1927,6 +2026,7 @@ section {
   padding-top: 10px;
   text-align: center;
   font-size: 13px;
+  line-height: normal;
   color: #012970;
 }
 
@@ -1959,6 +2059,32 @@ section {
 
 
 
+/*--------------------------------------------------------------
+# Modal css
+--------------------------------------------------------------*/
+ .modal {
+  background: rgba(0, 0, 0, 0.5);
+}
+ .modal-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  height: 100%;
+}
+.modal-backdrop.show {opacity: .67;}
+#myWelcomeModal .modal-dialog {max-width: 404px;}
+/* #myWelcomeModal .modal-header {padding: 0.2rem 1rem;} */
+#myWelcomeModal .modal-content {border-radius: 10px;outline: 0;}
+#myWelcomeModal h4{font-size:32px;line-height: 32px; font-weight: var(--sixth-font-weight);text-transform:uppercase;color: #404040;margin-bottom: 12px;}
+#myWelcomeModal p{font-size: 16px;font-weight: var(--main-normal);color: #404040;max-width: 90%;margin-left: auto;text-transform:uppercase;margin-right: auto;}
+.img-getstarted{width: 100%;height: auto;text-align: center;}
+.img-getstarted img{max-width: 100%;}
+.btngreen{background-color: #009f3c;color:var(--white);text-transform: capitalize;font-size: 13px;font-family:var(--main-font);padding: 12px 50px;border-radius: 10px;}
+.btngreen:hover{color:var(--white);}
+.btn-close{position:absolute;right:11px;top:11px;border:0;outline:none;width:24px;height:24px}
+
+
 
 /*--------------------------------------------------------------
 # Media css
@@ -1967,9 +2093,9 @@ section {
 @media (max-width: 767px) {
 
   /* Disable aos animation delay on mobile devices */
-  [data-aos-delay] {
+  /* [data-aos-delay] {
     transition-delay: 0 !important;
-  }
+  } */
 
   /* Common css */
   .text-xs-center {
